fixing size on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -121,6 +121,7 @@
  }
  .iframe-page {
    margin: 0 auto;
+   display: inline-block;
    position: absolute;
    padding-top: 4%;
    width: 100%;
@@ -131,9 +132,8 @@
    -webkit-overflow-scrolling:touch !important;
    overflow-y: scroll !important;
    @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
-     padding: 10px 15px 30px 0px;
      width: 85%;
-     height: 60%;
+     height: 50%;
    }
  }
  .fitpage {
